Feat: added some default stuff

--- a/_client/styles/_elements/_elements.headings.scss
+++ b/_client/styles/_elements/_elements.headings.scss
@@ -1,7 +1,7 @@
 // elements - headings
 
 .heading {
-  font: $f-heading;
+  @include font-loaded($f-heading);
 
   @include respond-to-min($bp-small) {
     font-size: 22px;
