--- a/_client/styles/_tools/_tools.mixins.scss
+++ b/_client/styles/_tools/_tools.mixins.scss
@@ -17,3 +17,11 @@
     @content;
   }
 }
+
+@mixin font-loaded($fontName) {
+  font: $fontName;
+
+  .font-loaded & {
+    font-family: $f-helvetica;
+  }
+}
